--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -1,3 +1,14 @@
+@primary-color: #6358FF;
+@primary-color-active: #463CD5;
+@primary-color-hover: #8077FF;
+@sup-color: #FFB357; // 辅助信息
+@title-color: #253044; // 标题
+@content-color: rgba(37, 48, 68, 0.84);
+; // 正文
+@disable-color: rgba(37, 48, 68, 0.32); // 禁用、占位
+@link-color: #3367D6;
+@link-hover: #008cff;
+
 
 ::-webkit-scrollbar {
     width: 13px;
